<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000">
    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="30dp"
        android:background="@color/white"
        android:layout_marginTop="90dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_type"
            android:textColor="@color/black"
            android:layout_below="@id/name"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:id="@+id/homeTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/homeTitle"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/bedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeTypeSpinner"
            android:text="@string/bed_num"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <Spinner
            android:id="@+id/bedSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/bedTitle"
            android:spinnerMode="dialog" />
        <TextView
            android:id="@+id/bathTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bath_num"
            android:textColor="@color/black"
            android:layout_below="@id/bedSpinner"
            android:textSize="18sp" />
        <Spinner
            android:id="@+id/bathSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/bathTitle"
            android:spinnerMode="dialog" />
        <!--Description-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/descriptionTil"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/homeTypeSpinner">-->

<!--            <EditText-->
<!--                android:id="@+id/bed"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/bed_num"-->
<!--                android:autofillHints="0"-->
<!--                android:inputType="number"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <!--Day-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/bathTil"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_below="@id/descriptionTil"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_height="wrap_content">-->

<!--            <EditText-->
<!--                android:id="@+id/bath"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:autofillHints="0"-->
<!--                android:hint="@string/bath_num"-->
<!--                android:inputType="number"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
        <LinearLayout
            android:id="@+id/deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/bathSpinner">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:spinnerMode="dialog" />
                <Spinner
                    android:id="@+id/daySpinner"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:spinnerMode="dialog" />
                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>


        </LinearLayout>
        <!--Day-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/dateTil"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_below="@id/bathTil"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:layout_height="wrap_content">-->

<!--            <EditText-->
<!--                android:id="@+id/date"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:autofillHints="00/00/00"-->
<!--                android:hint="@string/deadline"-->
<!--                android:inputType="datetime"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <CheckBox
            android:id="@+id/checkboxPrice"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/deadline"
            android:text="@string/set_range_for_price"
            android:checked="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceTil"
            android:layout_width="match_parent"
            android:layout_below="@id/checkboxPrice"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_height="50dp"
            android:visibility="invisible">

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="0"
                android:hint="@string/price"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/checkboxPrice"
            android:visibility="visible">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/minPriceTil"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/minPriceEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/min_price"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/maxPriceTil"
                android:layout_width="150dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/maxPriceEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/max_price"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressTil"
            android:layout_width="match_parent"
            android:layout_below="@id/priceTil"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:hint="@string/address"
                android:padding="16dp"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_location"
                android:gravity="center_vertical"
                android:background="@android:drawable/editbox_background"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/roommates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roommate"
            android:textColor="@color/black"
            android:layout_below="@id/addressTil"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:id="@+id/roommateSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/roommates"
            android:spinnerMode="dialog" />
        <TextView
            android:id="@+id/spots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spots"
            android:textColor="@color/black"
            android:layout_below="@id/roommateSpinner"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:id="@+id/spotSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/spots"
            android:spinnerMode="dialog" />
        <!--Requirement-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/requirementTil"
            android:layout_width="match_parent"
            android:layout_below="@id/spotSpinner"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/requirementEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descrip"
                android:autofillHints="home"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/requirementTil"
            android:layout_centerInParent="true"
            android:text="@string/submit"
            android:layout_marginTop="10dp" />
    </RelativeLayout>
</ScrollView>