...
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_message"
            android:gravity="start|center_vertical"
            android:textSize="12sp" />

        <Button
            android:id="@+id/editPost"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="275dp"
            android:background="@drawable/ic_edit"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
...
